#CRIANDO TABELAS ARRUMANDO ADAPTADORES E TESTES

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,18 @@
-# Nome da aplicação e perfil ativo
-spring.application.name=gerenciamento-financeiro
-spring.profiles.active=dev
+# application-test.properties
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Configurações do Swagger/OpenAPI
-springdoc.swagger-ui.operationsSorter=method
-springdoc.swagger-ui.tagsSorter=alpha
-springdoc.swagger-ui.filter=true
-springdoc.api-docs.path=/v3/api-docs
-springdoc.packages-to-scan=com.vinicius.gerenciamento_financeiro
-springdoc.show-actuator=false
-springdoc.paths-to-match=/api/**,\
-  /auth/**
-
-jwt.secret=chave
-jwt.expiration=86400000
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciamento
-#spring.datasource.username=postgres
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Configurações do JPA
-spring.jpa.hibernate.ddl-auto=update
+# JWT Configuration
+jwt.secret=chave-secreta-para-testes-nao-usar-em-producao
+jwt.expiration=3600000
+spring.profiles.active=persistence-adapter
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+# Disable Open Session in View
+spring.jpa.open-in-view=false
