--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -17,16 +17,15 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker build -t gerenciamento financeiro:dev .
+        run: docker build -t gerenciamento-financeiro:dev .
 
       - name: Run Tests
-        run: docker run gerenciamento-financiamento:dev mvn clean test
+        run: docker run gerenciamento-financeiro:dev mvn clean test
 
   deploy:
-
     needs: build-and-test
     runs-on: ubuntu-latest
 
     steps:
-      name: Subindo aplicação
-      run: docker run -d -p 8080:8080 gerenciamento-financeiro:dev
+      - name: Subindo aplicação
+        run: docker run -d -p 8080:8080 gerenciamento-financeiro:dev
