--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ jwt.secret=chave-secreta-para-testes-nao-usar-em-producao
 jwt.expiration=3600000
 spring.profiles.active=persistence-adapter
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-
+spring.sql.init.mode=always
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.open-in-view=false
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -17,5 +17,5 @@ springdoc.api-docs.path=/v3/api-docs
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
