--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ springdoc.api-docs.path=/v3/api-docs
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
