--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build and start services with Docker Compose
-        run: docker-compose up -d --build
+        run: docker compose up -d --build
 
       - name: Wait for RabbitMQ to be healthy
         run: |
@@ -31,11 +31,11 @@ jobs:
           done
 
       - name: Run tests
-        run: docker-compose exec -T app mvn clean test
+        run: docker compose exec -T app mvn clean test
 
       - name: Shutdown containers
         if: always()
-        run: docker-compose down
+        run: docker compose down
 
   deploy:
     needs: build-and-test
@@ -49,4 +49,4 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Start app container for deploy
-        run: docker-compose up -d --build app
+        run: docker compose up -d --build app
