--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,12 @@ services:
       RABBITMQ_DEFAULT_PASS: guest
     networks:
       - rede-local
+    healthcheck:
+      test: rabbitmqctl status
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 networks:
   rede-local:
