Criando dockerfile para o backend nesse caso

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,1 +1,27 @@
 FROM openjdk:21-jdk-slim
+
+RUN apt-get update && apt-get install -y \
+    curl \
+    netcat-traditional \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+WORKDIR /app
+
+COPY target/gerenciamento-financeiro-0.0.1-SNAPSHOT.jar app.jar
+
+RUN mkdir -p logs && chown -R appuser:appuser /app
+
+USER appuser
+
+EXPOSE 8080
+
+ENV JAVA_OPTS="-Xmx512m -Xms256m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -Dspring.profiles.active=dev"
+
+# Healthcheck para verificar se a aplicação está rodando
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:8080/actuator/health || exit 1
+
+# Comando para iniciar a aplicação
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
