Iniciando fluxo de migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 jwt.secret=chave-secreta-para-testes-nao-usar-em-producao
 jwt.expiration=3600000
-spring.profiles.active=persistence-adapter
+spring.profiles.active=dev-postgres
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.data-locations=classpath:import.sql
+
 
 spring.jpa.open-in-view=false
 springdoc.swagger-ui.path=/swagger-ui.html
