--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,53 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      postgres:
+        condition: service_healthy
       rabbitmq:
         condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/financeiro_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_RABBITMQ_USERNAME: guest
+      SPRING_RABBITMQ_PASSWORD: guest
     networks:
       - rede-local
+
+  postgres:
+    image: postgres:17-alpine
+    container_name: postgres-financeiro
+    environment:
+      POSTGRES_DB: financeiro_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d
+    networks:
+      - rede-local
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U financeiro_user -d financeiro_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   rabbitmq:
     build:
       context: .
       dockerfile: Dockerfile.rabbitmq
     ports:
-      - "5672:5672"       # Porta AMQP para a aplicação
-      - "15672:15672"     # Painel web do RabbitMQ
+      - "5672:5672"
+      - "15672:15672"
     hostname: rabbit
     container_name: meu-rabbit
     environment:
@@ -30,6 +65,10 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+
+volumes:
+  postgres_data:
+    driver: local
 
 networks:
   rede-local:
