--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,9 +2,29 @@
 jwt.secret=umaChaveSecretaParaTesteQueDeveTerPeloMenos256Bits
 jwt.expiration=3600000
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.connection-timeout=1000ms
+spring.rabbitmq.template.retry.enabled=true
+
+spring.jpa.open-in-view=false
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
+
+spring.h2.console.enabled=true
+spring.flyway.enabled=false
+
+logging.level.org.springframework.boot.autoconfigure=WARN
+logging.level.org.springframework.boot.test=INFO
