--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 jwt.secret=chave-secreta-para-testes-nao-usar-em-producao
 jwt.expiration=3600000
 spring.profiles.active=dev-postgres
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-only
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -16,7 +16,7 @@ spring.jpa.open-in-view=false
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
