feat - para transacao mapear configuração nesse caraio

--- a/src/main/resources/application-dev-postgres.properties
+++ b/src/main/resources/application-dev-postgres.properties
@@ -17,8 +17,9 @@ spring.sql.init.mode=never
 
 jwt.secret=chave-secreta-para-dev-postgres-nao-usar-em-producao
 jwt.expiration=3600000
-
 logging.level.org.flywaydb=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
 management.endpoints.web.exposure.include=health,info,flyway
+
+spring.rabbitmq.host=rabbitmq
