--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -1,5 +1,7 @@
 name: main/dev
 
+name: main/dev
+
 on:
   push:
     branches:
@@ -33,13 +35,13 @@ jobs:
           echo "Checking container status..."
           docker ps
           echo "Checking rabbitmq logs..."
-          docker logs localhost || true
+          docker logs $(docker compose ps -q rabbitmq) || true
 
       - name: Wait for RabbitMQ to be healthy
         run: |
           echo "Aguardando RabbitMQ ficar pronto..."
           for i in {1..30}; do
-            if docker exec localhost rabbitmqctl status > /dev/null 2>&1; then
+            if docker exec $(docker compose ps -q rabbitmq) rabbitmqctl status > /dev/null 2>&1; then
               echo "RabbitMQ está pronto!"
               break
             fi
@@ -57,9 +59,9 @@ jobs:
         if: failure()
         run: |
           echo "=== RabbitMQ Logs ==="
-          docker logs localhost
+          docker logs $(docker compose ps -q rabbitmq)
           echo "=== App Logs ==="
-          docker logs $(docker ps -q --filter ancestor=gerenciador-financas-app)
+          docker logs $(docker compose ps -q app)
 
       - name: Shutdown containers
         if: always()
