Corrigindo testes e cliente e cliente.id para todos os fluxos na main

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,6 +2,7 @@
 jwt.secret=umaChaveSecretaParaTesteQueDeveTerPeloMenos256Bits
 jwt.expiration=3600000
 
+# Database H2 para testes
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -10,7 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
@@ -28,3 +28,4 @@ spring.flyway.enabled=false
 
 logging.level.org.springframework.boot.autoconfigure=WARN
 logging.level.org.springframework.boot.test=INFO
+
